# fatx

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  build_cffi.py  setup.py
.github/workflows/: build-rust.yml  build.yml
fatxfs/: CMakeLists.txt  README.md  fatxfs_fuse.c  test.sh
fatxfs/man/: fatxfs.1.ronn
gfatx/: CMakeLists.txt  README.md  fatxfilesystemmodel.cpp  fatxfilesystemmodel.h  main.cpp
libfatx/: CMakeLists.txt  README.md  ext.c  ext.h  fatx.c  fatx.h  fatx_attr.c  fatx_dev.c  fatx_dir.c  fatx_disk.c  fatx_fat.c  fatx_file.c  fatx_internal.h  fatx_log.h  fatx_misc.c  fatx_partition.c  libfatxConfig.cmake.in
man/: fatxfs.1.ronn
pyfatx/: .gitignore  MANIFEST.in  README.md  __init__.py  __main__.py  build_cffi.py  pyproject.toml  setup.py
pyfatx/pyfatx/: __init__.py  __version__.py
pyfatx/tests/: test.py
rust/: Cargo.toml
rust/fatx/: Cargo.toml  README.md
rust/fatx-fuse/: Cargo.toml  README.md
rust/fatx-fuse/src/: main.rs
rust/fatx/src/: datetime.rs  dir.rs  error.rs  fat.rs  file.rs  fs.rs  lib.rs  partition.rs  path.rs  refurb.rs
src/: CMakeLists.txt  fatx.c  fatx.h  fatx_attr.c  fatx_dev.c  fatx_dir.c  fatx_disk.c  fatx_fat.c  fatx_file.c  fatx_internal.h  fatx_log.c  fatx_log.h  fatx_misc.c  fatx_partition.c  fatx_version.h  fatxfs_fuse.c
tests/: .gitignore  expected_sha256.txt  test.py  test.sh  xbox_hdd.img.tgz
