[build-system]
requires = ["setuptools>=42", "wheel", "cffi"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfatx"
description = "FATX Filesystem Utils"
authors = [
    { name = "Matt Borgerson", email = "contact@mborgerson.com" }
]
requires-python = ">=3.8"
dependencies = [
    "cffi"
]
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = [ "version" ]

[project.urls]
Homepage = "https://github.com/mborgerson/fatx"

[tool.setuptools]
packages = ["pyfatx"]
dynamic = { version = { attr = "pyfatx.__version__.__version__" } }
